--- a/src/index.css
+++ b/src/index.css
@@ -23,3 +23,8 @@ body {
   width: 100%;
   height: 100%;
 }
+
+/* Dark mode map tiles filter - community solution for OSM dark mode */
+.map-tiles-dark {
+  filter: brightness(0.6) invert(1) contrast(3) hue-rotate(200deg) saturate(0.3) brightness(0.7);
+}
